Working through issues with dark mode

--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,5 +1,11 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css";
 
+@media (prefers-color-scheme: dark) {
+  :root {
+    background-color: rgb(37, 36, 45);
+  }
+}
+
 [data-theme=dark],
 .theme-dark {
   background-color: rgb(37, 36, 45);
